--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
+    <link href="~/Content/Site.css?v=1.0" rel="stylesheet" />
+ 
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -25,7 +29,7 @@
         @RenderBody()
 
 
-        <hr />
+
         @*<footer>
                 <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
             </footer>*@
@@ -33,24 +37,44 @@
 
 
     @Scripts.Render("~/bundles/jquery")
-    @*@Scripts.Render("~/bundles/bootstrap")*@
-    <link href="~/Content/Site.css" rel="stylesheet" />
 
     @RenderSection("scripts", required: false)
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="~/Scripts/bootstrap.bundle.js"></script>
-    <script src="~/Scripts/script.js"></script>
+    <script src="~/Scripts/script.js?v=1.0"></script>
 
 
     <link href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css" rel="stylesheet" />
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 
-        <script>
+    <script>
         $(document).ready(function () {
             $('#tb_producto').DataTable();
         });
     </script>
 
-    
+
+    @Scripts.Render("~/bundles/sweetalert")
+
+    @if (ViewBag.NotificationMessage != null)
+    {
+        <script>
+            @Html.Raw(ViewBag.NotificationMessage)
+        </script>
+    }
+
+    <script>
+        $(document).ready(function () {
+            $("#btnToggleForm").click(function () {
+                $("#direccionForm").toggle(); // Alternar el valor de la propiedad 'display' entre 'none' y 'block'
+                $("#btnToggleForm").hide();
+                $("#no-direcion").hide();
+            });
+        });
+    </script>
+
+
+
 
 
 
