--- a/Web/Views/Shared/_LayoutTienda.cshtml
+++ b/Web/Views/Shared/_LayoutTienda.cshtml
@@ -13,7 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href="~/Content/Site.css?v=1.0" rel="stylesheet" />
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -75,7 +76,8 @@
     @Scripts.Render("~/bundles/jquery")
     @*@Scripts.Render("~/bundles/bootstrap")*@
     <script src="~/Scripts/bootstrap.bundle.js"></script>
-    <script src="~/Scripts/script.js"></script>
+    <script src="~/Scripts/script.js?v=1.0"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
