--- a/Web/Views/Producto/Edit.cshtml
+++ b/Web/Views/Producto/Edit.cshtml
@@ -1,24 +1,29 @@
 ﻿@model Infraestructure.Models.Producto
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Editar Producto";
     Layout = "~/Views/Shared/_LayoutTienda.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Editar Producto</h2>
 
 <div class="container">
-    @using (Html.BeginForm("Save", "Producto", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("Update", "Producto", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
         <div class="row">
             <div class="col-md-6">
                 <div class="col-md-6">
+                    @if (Model.Imagen != null)
+                    {
+                        <img src="data:image/png;base64,@Convert.ToBase64String(Model.Imagen)" class="img-thumbnail" alt="Imagen del producto">
+                    }
                     <input type="file" class="form-control mt-3" name="ImageFile">
                 </div>
             </div>
             <div class="col-md-6">
-                
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "form-label" })
                     @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control" })
@@ -40,8 +45,7 @@
                     @Html.DropDownListFor(model => model.IdCategoria,
                       (SelectList)ViewBag.Categorias,
                       "Categorias",
-                       htmlAttributes: new { @class = "form-control", onchange = "updateCategoriaValue(this.value)" })
-                       @Html.HiddenFor(model => model.Categoria, new { @id = "CategoriaValue" , name = "Categoria" })
+                      htmlAttributes: new { @class = "form-control" })
                 </div>
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Stock, htmlAttributes: new { @class = "form-label" })
@@ -55,7 +59,7 @@
         </div>
         <div class="row">
             <div class="col-6">
-                <input type="submit" id="guardarBtn" value="Guardar" onclick="" class="btn btn-success w-100" />
+                <input type="submit" value="Guardar" onclick="" class="btn btn-success w-100" />
             </div>
             <div class="col-6">
                 <input type="button" value="Descartar" onclick="descartar()" class="btn btn-danger w-100" />
@@ -66,15 +70,15 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-<script>
-    function updateCategoriaValue(selectedValue) {
-        document.getElementById("CategoriaValue").value = selectedValue;
-    }
-</script>
 }
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
 <style>
+    .img-thumbnail {
+        max-width: 200px;
+        max-height: 200px;
+    }
+
     .modal-dialog {
         max-width: 60%;
         max-height: 60%;
