--- a/Web/Views/Producto/ProductoAdmin.cshtml
+++ b/Web/Views/Producto/ProductoAdmin.cshtml
@@ -8,6 +8,7 @@
 <div class="content">
 
     <h1 id="producto-titulo" class="producto-titulo text-center mb-5" style=" color: var(--gray-nav) !important; font-size: 2.3rem !important;">Productos</h1>
+    <a href="@Url.Action("Create","Producto")" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">Crear</a>
 
     <div class="card">
 
@@ -32,24 +33,30 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                                <tr>
-                                    <td>@Html.DisplayFor(model => item.Nombre)</td>
-                                    <td>@Html.DisplayFor(model => item.Id)</td>
-                                    <td>@Html.DisplayFor(model => item.Precio)</td>
-                                    <td>@Html.DisplayFor(model => item.Estado)</td>
-                                    <td>
-                                        <a href="@Url.Action("Details","Producto",new {id= item.Id})" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">
-                                            <span class="material-symbols-outlined">
-                                                edit
-                                            </span>
-                                        </a>
-                                        <a href="@Url.Action("Details","Producto",new {id= item.Id})" class="btn  text-white btn flex-grow-1 pt-2" style="background: red ">
-                                            <span class="material-symbols-outlined">
-                                                delete
-                                            </span>
-                                        </a>
-                                    </td>
-                                </tr>
+                                if (item.Borrado == false)
+                                {
+                                    <tr>
+                                        <td>@Html.DisplayFor(model => item.Nombre)</td>
+                                        <td>@Html.DisplayFor(model => item.Id)</td>
+                                        <td>@Html.DisplayFor(model => item.Precio)</td>
+                                        <td>@Html.DisplayFor(model => item.Estado)</td>
+                                        <td>
+                                            <a href="@Url.Action("Details", "Producto", new { id = item.Id })" class="btn  text-white btn flex-grow-1 pt-2" style="background: green ">
+                                                <span class="material-symbols-outlined">
+                                                    info
+                                                </span>
+                                            </a>
+                                            <a href="@Url.Action("Edit", "Producto", new { id = item.Id })" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">
+                                                <span class="material-symbols-outlined">
+                                                    edit
+                                                </span>
+                                            </a>
+                                            <a class="btn  text-white btn flex-grow-1 pt-2" style="background: red ">
+                                                <span class="btnEliminar material-symbols-outlined text-white" data-id="@Html.DisplayFor(m=> item.Id)">delete</span>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                }
                             }
                         </tbody>
 
@@ -63,3 +70,27 @@
     </div>
 
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        // Manejador de evento click para el botón de eliminar
+        $(".btnEliminar").click(function () {
+            var productoId = $(this).data("id");
+
+            // Realiza la petición Ajax para eliminar el producto
+            $.ajax({
+                url: "/Producto/Delete",
+                type: "POST",
+                data: { id: productoId },
+                success: function (data) {
+                    // Muestra el resultado de la eliminación en el elemento div
+                    $("#resultado").text(data);
+                    console.log("Producto borrado")
+                },
+                error: function () {
+                    $("#resultado").text("Error al eliminar el producto.");
+                }
+            });
+        });
+    });
+</script>
