--- a/Web/Views/Producto/_ProductoTienda.cshtml
+++ b/Web/Views/Producto/_ProductoTienda.cshtml
@@ -68,9 +68,10 @@
                         <div class="card-body">
                             <h5 class="card-title"> @Html.DisplayFor(modelItem => item.Descripcion) </h5>
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn" style="background: var(--color-danger) ">
-                                    <span class="material-symbols-outlined text-white">edit</span>
-                                </button>
+                                
+                                <a href="@Url.Action("Edit","Producto",new {id= item.Id})" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-danger) ">
+                                 Editar
+                                </a>
                                 <a href="@Url.Action("Details","Producto",new {id= item.Id})" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">Detalles</a>
                             </div>
                         </div>
