--- a/Web/Views/Producto/_Productos.cshtml
+++ b/Web/Views/Producto/_Productos.cshtml
@@ -75,6 +75,8 @@
 
             @foreach (var item in Model)
             {
+                if (item.Borrado == false)
+                {
                 <div class="col-md-3 ">
                     <div class="card carta-sombra" style="max-width:210px">
                         <img src="data:image/png;base64,@Convert.ToBase64String(item.Imagen)"
@@ -89,11 +91,12 @@
                                     </button>
                                    
                                     
-                                    <a href="@Url.Action("Details","Producto",new {id= item.Id})" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">Detalles</a>
+                                    <a href="@Url.Action("Details", "Producto", new { id = item.Id })" class="btn  text-white btn flex-grow-1 pt-2" style="background: var(--color-secondary-variant) ">Detalles</a>
                                 </div>
                         </div>
                     </div>
                 </div>
+                }
             }
         </div>
     </div>
